Closed Bug 1143876 Opened 9 years ago Closed 9 years ago

WebGL2 should treat invalidate-framebuffer as optional

Categories

(Core :: Graphics: CanvasWebGL, defect)

38 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

Attachments

(1 file)

I don't think it's worth forbidding WebGL2 on platforms that are only missing invalidate-framebuffer, since it's only a performance hint.

In particular, this seems to be OSX <10.9.

Let's make it optional.
Attachment #8578273 - Flags: review?(dglastonbury)
Attachment #8578273 - Flags: review?(dglastonbury) → review+
https://hg.mozilla.org/mozilla-central/rev/59bc41a51a2b
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: