Bug 1143876 - Treat invalidate-framebuffer as optional for WebGL2. - r=kamidphish